# RailShell

./: .cirrus.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
includes/: colors.h
scripts/: appveyor.ps1  build.sh  ci.sh  clean.sh  package.sh
src/: main.cpp
